Fixes #14487.  Set overflow:auto for TextArea-compat.css to allow IE to remove the scrollbar when not needed.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@27694 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/custom/TextArea-compat.less
+++ b/mobile/themes/custom/TextArea-compat.less
@@ -4,4 +4,5 @@
 .mblTextArea {
 	-moz-border-radius: @theme-default-border-radius;
 	border-radius: @theme-default-border-radius;
+	overflow: auto;
 }
